--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,135 @@ header{
  .exp-class{
    padding-bottom: 100px;
  }
+
+ @import "https://fonts.googleapis.com/css?family=Open+Sans:800&display=swap";
+
+ .slider {
+	 display: flex;
+	 height: 350px;
+	 max-height: auto;
+	 overflow-y: hidden;
+	 overflow-x: scroll !important;
+	 padding: 16px;
+	 transform: scroll(calc(var(--i,0)/var(--n)*-100%));
+	 scroll-behavior: smooth;
+}
+ .slider::-webkit-scrollbar {
+	 height: 5px;
+	 width: 150px;
+	 display: none;
+}
+ .slider::-webkit-scrollbar-track {
+	 background: transparent;
+}
+ .slider::-webkit-scrollbar-thumb {
+	 background: #888;
+}
+ .slider::-webkit-scrollbar-thumb:hover {
+	 background: #555;
+}
+ .slider img:hover {
+	 transform: scale(1.05);
+	 box-shadow: 10px 10px 10px rgba(0,0,0,0.15);
+}
+ .slide {
+
+	 position: relative;
+}
+ .slide img {
+	 height: 100%;
+	 width: 250px;
+	 margin: 0 10px;
+	 object-fit: cover;
+	 border-radius: 15px;
+	 cursor: pointer;
+	 transition: .25s ease-in-out;
+}
+ .control-prev-btn {
+	 position: absolute;
+	 top: 50%;
+	 left: 0;
+	 background-color: rgba(255,255,255,0.55);
+	 height: 100px;
+	 line-height: 100px;
+	 width: 45px;
+	 text-align: center;
+	 box-shadow: 0 1px 3px #888;
+	 user-select: none;
+	 color: #444;
+	 cursor: pointer;
+}
+ .control-next-btn {
+	 position: absolute;
+	 top: 50%;
+	 right: 0;
+	 background-color: rgba(255,255,255,0.55);
+	 height: 100px;
+	 line-height: 100px;
+	 width: 45px;
+	 text-align: center;
+	 box-shadow: 0 1px 3px #888;
+	 user-select: none;
+	 color: #444;
+	 cursor: pointer;
+}
+.slide img.zoomed{
+	  width: 500px;
+    height: 600px;
+    position: fixed;
+    left: 25%;
+    top: 0%;
+    z-index: 1000;
+		transform: scale(1) translatey(0) !important;
+
+}
+.overlay{
+		position: absolute;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,.45);
+    top: 0;
+		display: none;
+}
+.overlay.active{
+	display: block;
+}
+ @media only screen and (max-width: 420px) {
+	 .slider {
+		 padding: 0;
+	}
+	 .slide {
+		 padding: 16px 10px;
+	}
+	 .slide img {
+		 margin: 0;
+	}
+	 .control-prev-btn {
+		 top: 37%;
+	}
+	 .control-next-btn {
+		 top: 37%;
+	}
+}
+
+.slide {
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(2,59,52,1) 100%, rgba(0,212,255,1) 100%);
+  width: 500px;
+  padding: 5rem;
+}
+.slid h3{
+  color:#A9A9A9
+}
+/**
+.slid #container{
+  overflow-y: scroll;
+  overflow-x: hidden;
+  transform: rotate(270deg) translateX(-100%);
+  transform-origin: top left;
+  background-color: #999;
+  position: absolute;
+  width: 100vh;
+  height: 100vh;
+
+}
